<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Original -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ori"
            android:paddingTop="15dp"  />
        <ImageView
            android:id="@+id/ori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sample_img"/>

        <!-- 20% -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degree_20"
            android:paddingTop="15dp"  />
        <ImageView
            android:id="@+id/ori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sample_img"
            android:tint="#333333"
            android:tintMode="add"/>

        <!-- 40% -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degree_40"
            android:paddingTop="15dp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sample_img"
            android:tint="#666666"
            android:tintMode="add"/>

        <!-- 60% -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degree_60"
            android:paddingTop="15dp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sample_img"
            android:tint="#999999"
            android:tintMode="add"/>

        <!-- 80% -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degree_80"
            android:paddingTop="15dp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sample_img"
            android:tint="#CCCCCC"
            android:tintMode="add"/>

        <!-- 80% : code
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degree_80_by_code"
            android:paddingTop="15dp" />
        <ImageView
            android:id="@+id/after"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sample_img" />
        -->
    </LinearLayout>

</ScrollView>
